# triangles3bevy

./: Cargo.toml  useful.md
desktop/: Cargo.toml
desktop/src/: lib.rs
lib/radial_background/: Cargo.toml
lib/radial_background/src/: lib.rs
mobile/: Cargo.toml
mobile/src/: lib.rs
src/: lib.rs  main.rs
