[package]
name = "triangles3bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!
members = [
    "mobile",
    "./lib/radial_background"
]

[package.metadata.android]
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
assets = "./assets"

[package.metadata.android.sdk]
target_sdk_version = 31

[dependencies]
bevy = { version = "0.12.0"}
image = "0.24"
radial_background = {path = "./lib/radial_background"}
rand = "0.8.5"
bevy_asset_loader = "0.18.0"
